# DonCE_KongJr

Cliente/: CMakeLists.txt  cliente.c  cliente.h  constants.h  juego.c  juego.h  mensajes.c  mensajes.h  renderer.c  renderer.h
Servidor/: pom.xml
Servidor/src/: Servidor.java
Servidor/src/main/java/: module-info.java
Servidor/src/main/java/org/servidor/servidor/: AdminMain.java  AppController.java
Servidor/src/main/java/org/servidor/servidor/jsonparser/: MessageCreator.java  RegisterParser.java
Servidor/src/main/java/org/servidor/servidor/juego/: Level.java  LevelSmoke.java  Liana.java  LianaInfo.java  LianasConfig.java  Sala.java  Segmento.java  TileMap.java  TileType.java
Servidor/src/main/java/org/servidor/servidor/juego/entidades/: BoundingBox.java  Cocodrilo.java  CocodriloAzul.java  CocodriloRojo.java  DKJr.java  EntitiesSmoke.java  Entity.java  Fruta.java  MovementStrategy.java  MovimientoAzul.java  MovimientoRojo.java
Servidor/src/main/java/org/servidor/servidor/juego/reglas/: CollisionUtil.java  DKJrPlatformLianaSmoke.java  GameLoop.java  GameLoopCollisionsSmoke.java  GameLoopSmoke.java  GameState.java  Snapshot.java  VictorySpeedFactorSmoke.java  WorldUtil.java
Servidor/src/main/java/org/servidor/servidor/mensajes/: MessageManagement.java  MessageSender.java
Servidor/src/main/java/org/servidor/servidor/socket/: ClientHandler.java  ClienteActivo.java  ManejoCliente.java  RegistroCliente.java  Servidor.java
Servidor/src/main/resources/org/servidor/servidor/: hello-view.fxml
